added new pitch section.

--- a/landing.html
+++ b/landing.html
@@ -21,11 +21,11 @@
 				<div id="nav_pitch" class="nav">
 					<ul class="cf">
 						<li class="triggerGoPitch1"><img src="images/pitchicons/icon_home_white.png"/><span>Begin</span></li>
-						<li class="triggerGoPitch2"><img src="images/pitchicons/icon_hand_white.png"/><span>Mission</span></li>
+						<li class="triggerGoPitch2"><img src="images/pitchicons/icon_hand_white.png"/><span>Facts</span></li>
 					</ul>
 				</div> <!-- nav -->
 				<div id="content">
-					<div id="pitch_1">
+					<div id="pitch_1" class="pitch">
 						<img id="hero_image" src="images/full_white_logo.png"/>
 						<div class="contentSlider" id="login_slider">
 							<div class="contentSlide">
@@ -53,8 +53,29 @@
 							</div>
 						</div>
 					</div> <!-- pitch_1 -->
-					<div id="pitch_2">
-						<p>asdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdasdklja askdja lkdas dklja sdvv</p>
+					<div id="pitch_2" class="pitch cf">
+						<h1>Let's start with the <span>facts</span>.</h1>
+						<div id="pitch_2_teacher_survey">
+							<h2>10,000 public school teachers were asked to list the top five factors for retaining good educators...</h2>
+							<table>
+								<tr>
+									<td class="surveyPercentage"><span>97%</span></td>
+									<td class="surveyResult">Supportive Leadership</td>
+									<td class="surveyPercentage"><span>93%</span></td>
+									<td class="surveyResult">Family Involvement</td>
+									<td class="surveyPercentage"><span>91%</span></td>
+									<td class="surveyResult">Help with Disability Students</td>
+								</tr>
+								<tr>
+									<td class="surveyPercentage"></td>
+									<td class="surveyResult" id="hidden_result">Reported by more than 85%</td>
+									<td class="surveyPercentage"><span>90%</span></td>
+									<td class="surveyResult">Quality Curriculum and Teaching Resources</td>
+									<td class="surveyPercentage"><span>89%</span></td>
+									<td class="surveyResult">Colaboration Among Teachers</td>
+								</tr>
+							</table>
+						</div><!-- pitch_2_teacher_survey -->
 					</div> <!-- pitch_2 -->
 				</div> <!-- content -->
 			</div> <!-- wrapper -->
